--- a/1.html
+++ b/1.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
 </head>
 <body>
-<h1><a href="index.html">WEB</a></h1>
+
 <ol>
 <li><a href="1.html">HTML</a></li> <!--1.html-->
 <li><a href="2.html">CSS</a></li> <!--2.html-->
 <li><a href="3.html">JavaScript</a></li> <!--3.html-->
 </ol>
 
-<h2>WEB</h2>
+<h1>HTML이란?</h1>
 
 <img src="html.jpg" alt="html image" width="100%" height="100%">
 
