--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <img src="web.jpg" alt="html image" width="100%" height="100%">
 
-<p>The HyperText Markup Language or HTML is <strong> the standard  <u>markup</u> language</strong> for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.</p>
-<p>Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages. HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
-<p style="margin-top:40px">HTML elements are the building blocks of <a href="https://en.wikipedia.org/wiki/HTML">HTML</a> pages. With HTML constructs, images and other objects such as interactive forms may be embedded into the rendered page. HTML provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML elements are delineated by tags, written using angle brackets. Tags such as &lt;img /&gt; and &lt;input /&gt; directly introduce content into the page. Other tags such as &lt;p&gt; surround and provide information about document text and may include other tags as sub-elements. Browsers do not display the HTML tags but use them to interpret the content of the page.</p>
-
+<p>Web most often <strong>refers to:</strong>
+  
+<p>Spider web, a silken structure created by the animal</p>
+<p>World Wide Web or the Web, an Internet-based hypertext system</p>
 </body>
 </html>
