--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <p>Web most often <strong>refers to:</strong>
   
-<p>Spider web, a silken structure created by the animal</p>
-<p>World Wide Web or the Web, an Internet-based hypertext system</p>
+<li>Spider web, a silken structure created by the animal</li>
+<li>World Wide Web or the Web, an Internet-based hypertext system</li>
 </body>
 </html>
