--- a/2.html
+++ b/2.html
@@ -20,4 +20,4 @@
     <p>Separation of formatting and content also makes it feasible to present the same markup page in different styles for different rendering methods, such as on-screen, in print, by voice (via speech-based browser or screen reader), and on Braille-based tactile devices. CSS also has rules for alternate formatting if the content is accessed on a mobile device.</p>
 
   </body>
-</html>>
+</html>
