--- a/2.html
+++ b/2.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <title>2.html</title>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-    <h1><a href="index.html">WEB</a></h1>
-    <ol>
-    <li><a href="1.html">HTML</a></li> <!--1.html-->
-    <li><a href="2.html">CSS</a></li> <!--2.html-->
-    <li><a href="3.html">JavaScript</a></li> <!--3.html-->
-    </ol>
+<html>
 
-    <h2>CSS란?</h2>
+<head>
+  <title> WEB </title>
+  <meta charset=”utf-8”>
+  <script src="master.js"></script>
+  <link rel="stylesheet" href="style.css">
+</head>
 
-    <img src="CSS.jpg" alt="CSS image" width="100%" height="100%">
-    <p>CSS is designed to enable the separation of presentation and content, including layout, colors, and fonts.[3] This separation can improve content accessibility; provide more flexibility and control in the specification of presentation characteristics; enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file, which reduces complexity and repetition in the structural content; and enable the .css file to be cached to improve the page load speed between the pages that share the file and its formatting.</p>
-    <p>Separation of formatting and content also makes it feasible to present the same markup page in different styles for different rendering methods, such as on-screen, in print, by voice (via speech-based browser or screen reader), and on Braille-based tactile devices. CSS also has rules for alternate formatting if the content is accessed on a mobile device.</p>
+<body style="background-color: white; color: black;">
+  <h1><a href="index.html">WEB</a></h1>
+  <div id="grid">
+  <ol>
+    <li><a href="1.html">HTML</a></li>
+    <li><a href="2.html">CSS</a></li>
+    <li><a href="3.html">JavaScript</a></li>
+  </ol>
 
-  </body>
+<div id="article">
+  <input id="night_day" type="button" value="night" onclick="nightDayHandler(this)">
+  <h2>CSS</h2>
+  <p>
+    Cascading Style Sheets (<span id="first">CSS</span>) is a style sheet language used for describing the presentation of a document written in a markup language such as HTML or XML (including XML dialects such as SVG, MathML or XHTML). <span>CSS</span> is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.
+  </p>
+  <img src="https://images.unsplash.com/photo-1523437113738-bbd3cc89fb19?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80" alt="css image" width="100%">
+  <p>
+    <span>CSS</span> is designed to enable the separation of presentation and content, including layout, colors, and fonts.[3] This separation can improve content accessibility; provide more flexibility and control in the specification of presentation characteristics; enable multiple web pages to share formatting by specifying the relevant CSS in a separate .css file, which reduces complexity and repetition in the structural content; and enable the .css file to be cached to improve the page
+    load speed between the pages that share the file and its formatting.
+  </p>
+  <input id="night_day" type="button" value="night" onclick="nightDayHandler(this)">
+</div>
+</div>
+</body>
+
 </html>
