--- a/index.html
+++ b/index.html
@@ -2,35 +2,37 @@
 <html>
 
 <head>
-  <title> WEB </title>
+  <title> ANIMAL </title>
   <meta charset=”utf-8”>
   <script src="master.js"></script>
   <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 </head>
 
 <body style="background-color: white; color: black;">
-  <h1><a href="index.html">WEB</a></h1>
+  <h1><a href="index.html">ANIMAL</a></h1>
   <div id="grid">
     <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
+      <li><a href="1.html">DOG</a></li>
+      <li><a href="2.html">CAT</a></li>
+      <li><a href="3.html">RABBIT</a></li>
+      <li><a href="3.html">TIGER</a></li>
+      <li><a href="3.html">ELEPHANT</a></li>
+      <li><a href="3.html">GIRAFFE</a></li>
+      <li><a href="3.html">PANDA</a></li>
     </ol>
 
     <div id="article">
       <input id="night_day" type="button" value="night" onclick="nightDayHandler(this)">
-      <h2>WEB</h2>
+      <h2>DOG</h2>
       <p>
-        The World Wide Web (WWW), commonly known as the Web, is an information system enabling documents and other web
-        resources to be accessed over the Internet.
+        The dog (Canis familiaris or Canis lupus familiaris) is a domesticated descendant of the wolf. Also called the domestic dog, it is derived from the extinct Pleistocene wolf, and the modern wolf is the dog's nearest living relative. Dogs were the first species to be domesticated by hunter-gatherers over 15,000 years ago before the development of agriculture.
       </p>
       <img
-        src="https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80"
+        src="https://images.unsplash.com/photo-1543466835-00a7907e9de1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8ZG9nfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"
         alt="web image" width="20%">
       <p>
-        Documents and downloadable media are made available to the network through web servers and can be accessed by
-        programs such as web browsers. Servers and resources on the World Wide Web are identified and located through
-        character strings called uniform resource locators (URLs).
+        Due to their long association with humans, dogs have expanded to a large number of domestic individuals and gained the ability to thrive on a starch-rich diet that would be inadequate for other canids.
       </p>
       <input type="button" value="night" onclick="nightDayHandler(this)">
     </div>
